--- a/css/task-03.css
+++ b/css/task-03.css
@@ -1,10 +1,11 @@
 .gallery {
   list-style: none;
   display: flex;
-  align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  gap: 20px;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 1rem;
 }
 
 /* .gallery-item {
